--- a/main.css
+++ b/main.css
@@ -103,7 +103,7 @@ body
 .house 
 {   
     margin: 10px 10px 10px 10px;
-    flex-basis: 440px;
+    flex-basis: 400px;
 }
 .house:hover
 {
@@ -138,27 +138,27 @@ body
 .cake
 {   
     margin: 10px 10px 10px 10px;
-    flex-basis: 440px;
+    flex-basis: 400px;
 }
 .tent
 {   
     margin: 10px 10px 10px 10px;
-    flex-basis: 440px;
+    flex-basis: 400px;
 }
 .game
 {   
     margin: 10px 10px 10px 10px;
-    flex-basis: 440px;
+    flex-basis: 400px;
 }
 .safe
 {   
     margin: 10px 10px 10px 10px;
-    flex-basis: 440px;
+    flex-basis: 400px;
 }
 .boat
 {   
     margin: 10px 10px 10px 10px;
-    flex-basis: 440px;
+    flex-basis: 400px;
 }
 .image img
 {
@@ -202,104 +202,6 @@ body
     }
 }
 
-/*
-
-.button
-{   
-    display: flex;
-    flex-flow: row wrap;
-    margin: 10px 0px 0px 0px;
-    width: 100%;
-    height: auto;
-    border: 1px solid black;
-    background-color: #2C3E50;
-    color: white;
-}
-.navbar
-{   
-    color: white;
-    font-size: 40px;
-    align-self: flex-start;
-    font-family: sans-serif;
-    margin: 10px auto;
-    transition: 0.7s;
-   
-
-}
-.navbar:hover
-{
-    opacity: 0;
-    transition: 1s;
-}
-.home
-{   
-    width: 8%;
-    font-size: 25px;
-    align-self: center;
-    margin: 10px 30px 10px 50px;
-    background-color: #2C3E50;
-    color: white;
-    transition: 0.7s;
-}
-.portfolio
-{   
-    font-size: 25px;
-    align-self: center;
-    margin: 10px 30px 10px 50px;
-    width: 8%;
-    background-color: #2C3E50;
-    color: white;
-    transition: 0.7s;
-}
-.about1
-{
-    width: 8%;
-    font-size: 25px;
-    align-self: center;
-    margin: 10px 30px 10px 50px;
-    background-color: #2C3E50;
-    color: white; 
-    transition: 0.7s;
-}
-.contact1
-{
-    width: 8%;
-    font-size: 25px;
-    align-self: center;
-    margin: 10px 30px 10px 50px;
-    background-color: #2C3E50;
-    color: white;
-    transition: 0.7s;
-}
-.home:hover
-{
-    color: #18bc9c;
-    width: 10%;
-    font-size: 32px;
-    transition: 0.7s;
-}
-.portfolio:hover
-{
-    color: #18bc9c;
-    width: 10%;
-    font-size: 32px;
-    transition: 0.7s;
-}
-.about1:hover
-{
-    color: #18bc9c;
-    width: 10%;
-    font-size: 32px;
-    transition: 0.7s;
-}
-.contact1:hover
-{
-    color: #18bc9c;
-    width: 10%;
-    font-size: 32px;
-    transition: 0.7s;
-}
-*/
 
 /*Меню*/
 nav ul
@@ -337,6 +239,7 @@ nav ul li a
     text-align: center;
     display: none;
     font-size: 30px;
+    cursor: pointer;
 }
 @media screen and (max-width: 800px)
 {
@@ -374,11 +277,47 @@ a
     width: 100%;
     background-color: #2C3E50;
 }
+
+/**/
 .contact
-{
+{   
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
     height: 500px;
     width: 100%;
 }
+.name1
+{
+    margin: 10px;
+    width: 295px;
+    height: 30px;
+}
+.login1
+{
+    margin: 10px;
+    width: 295px;
+    height: 30px; 
+}
+.btn1
+{
+    background-color: #2C3E50;
+    height: 30px;
+    width: 100px;
+    color: white;
+    font-size: 15px;
+    padding: 2px 5px 2px 5px;
+    font-family: serif;
+    border-radius: 40px;
+    cursor: pointer;
+}
+.btn11
+{   
+    display: flex;
+    justify-content: center;
+}
+
+/* About */
 .about
 {   
     display: flex;
