--- a/main.css
+++ b/main.css
@@ -271,41 +271,65 @@ a
 
 
 /* Footer */
+
+
+/* Adress*/
 .adress
-{
-    height: 200px;
+{   
+    display: flex;
     width: 100%;
     background-color: #2C3E50;
 }
+address
+{   
+    color: white;
+    margin: 20px 5px 25px 33px;
+    padding: 10px 0px 0px 5px;
+}
+.iconlink
+{
+    display: flex;
+    justify-content: center;
+     margin: 50px auto;
+}
+.gmail, .face, .vk
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 24px 5px 24px;
+}
 
-/**/
+
+/* Contact */
 .contact
 {   
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    height: 500px;
+    height: 640px;
     width: 100%;
+    background-color: #E9E9E9;
 }
 .name1
 {
-    margin: 10px;
-    width: 295px;
-    height: 30px;
+    margin: 10px 10px 10px 0px;
+    width: 258px;
+    height: 40px;
 }
 .login1
 {
-    margin: 10px;
-    width: 295px;
-    height: 30px; 
+    margin: 10px 10px 10px 0px;
+    width: 258px;
+    height: 40px; 
 }
 .btn1
 {
     background-color: #2C3E50;
-    height: 30px;
-    width: 100px;
+    height: 36px;
+    width: 120px;
     color: white;
-    font-size: 15px;
+    font-size: 18px;
     padding: 2px 5px 2px 5px;
     font-family: serif;
     border-radius: 40px;
@@ -315,6 +339,31 @@ a
 {   
     display: flex;
     justify-content: center;
+    margin: 10px auto;
+}
+.foricon
+{    
+    display: flex;
+    align-items: center;
+    align-content: center;
+    margin: 20px auto;
+}
+table 
+{
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    border-collapse: collapse;
+}
+.firstrow
+{
+    background-color: #ccc;
+}
+.forform
+{
+    font-size: 50px;
+    color: #2C3E50;
+    border-bottom: 7px solid #2C3E50;
+    text-align: center;
 }
 
 /* About */
